@@ -17,7 +17,9 @@ January,  , 2024, AnnotSV version 3.4
 	- Add new regulatory elements annotations:
 		- Activity-by-Contact (ABC) model annotations
 		- Massively Parallel Reporter assays (MPRA) annotations
-	- Add benign SV annotation from "gnomad v4" (GRCh38) (issue 201)
+	- Add benign SV annotation:
+		- from gnomad v4 (GRCh38) (issue 201)
+		- from PACBIO long reads: HPRC + EEE datasets (GRCh38) (issue 202)
 	- Fix misleading OMIM annotation (issues 156, 132)
 	- Add "NCBI_gene_ID" annotation
 	- Update of the "contact" recommendations in output (from email to GitHub)
